--- a/banking.html
+++ b/banking.html
@@ -19,18 +19,18 @@
     <main>
         <section class="mt-8">
             <div class="grid grid-cols-3 gap-4 text-white">
-                <div class="bg-blue-300  p-8 rounded ">
+                <div class="bg-blue-400  p-8 rounded ">
                     <h1 class="text-2xl">Deposite</h1>
                     <h1 class="text-4xl">
                         $<span id="DepositeAmount">00</span>
                     </h1>
                 </div>
-                <div class="bg-green-300  p-8 rounded ">
+                <div class="bg-green-400  p-8 rounded ">
                     <h1 class="text-2xl">Withdraw</h1>
                     <h1 class="text-4xl">
                         $<span id="WithdrawAmount">00</span></h1>
                 </div>
-                <div class="bg-orange-300  p-8 rounded ">
+                <div class="bg-orange-400  p-8 rounded ">
                     <h1 class="text-2xl">Balance</h1>
                     <h1 class="text-4xl">
                         $<span id="BalanceAmount">1200</span></h1>
@@ -45,7 +45,7 @@
                         <input class="mt-2 w-3/4" type="email" name="" id="DepositeInput"
                             placeholder="Enter your Deposite amount">
                         <br>
-                        <button class="bg-yellow-600 px-4 py-2 rounded text-white font-medium mt-4"
+                        <button class="bg-blue-500 px-4 py-2 rounded text-white font-medium mt-4"
                             id="DepositeButton">Deposite</button>
                     </div>
                 </div>
@@ -55,7 +55,7 @@
                         <input class="mt-2 w-3/4" type="email" name="" id="WithdrawInput"
                             placeholder="Enter your Withdraw amount">
                         <br>
-                        <button class="bg-yellow-600 px-4 py-2 rounded text-white font-medium mt-4"
+                        <button class="bg-green-500 px-4 py-2 rounded text-white font-medium mt-4"
                             id="WithdrawButton">Withdraw</button>
                     </div>
                 </div>
